fix: addr overflow style

--- a/src/containers/home/Address.scss
+++ b/src/containers/home/Address.scss
@@ -5,7 +5,8 @@
   height: .8rem;
   line-height: .8rem;
   border-bottom: 1px solid $border-gray;
-  font-size: .16rem;
+  box-sizing: content-box;
+  font-size: 0;
   .icon{
     margin-right: .1rem;
     vertical-align: middle;
@@ -13,8 +14,10 @@
   span{
     margin-right: .25rem;
     vertical-align: middle;
+    font-size: .16rem;
   }
   a{
     @include stylelessA;
+    font-size: .16rem;
   }
 }
